refactor: feedback 반영