@@ -1,28 +1,30 @@
 package racingcar;
 
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class Names {
 
-  private final ArrayList<String> names;
+  private static final int MAX_LENGTH = 5;
+  private final List<String> names;
 
-  public Names(String unsplitted) {
-    String[] splitted = unsplitted.split(",");
-    names = new ArrayList<>(splitted.length);
-    for (String name : splitted) {
-      validate(name);
-    }
-    names.addAll(Arrays.asList(splitted));
+  public Names(String[] names) {
+    validateNames(names);
+    this.names = List.of(names);
   }
 
-  private void validate(String name) {
-    if (name.length() > 5) {
+  private void validateNames(String[] names) {
+    Arrays.stream(names)
+        .forEach(this::validateName);
+  }
+
+  private void validateName(String name) {
+    if (name.length() > MAX_LENGTH) {
       throw new IllegalArgumentException("자동차 이름은 5자를 초과할 수 없습니다.");
     }
   }
 
-  public ArrayList<String> getNames() {
+  public List<String> getNames() {
     return names;
   }
 
@@ -30,7 +32,7 @@ public class Names {
     return names.size();
   }
 
-  public String getCarName(int index) {
+  public String getNameByIndex(int index) {
     return names.get(index);
   }
 }
